--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^1.0.6",
-    "@mantine/hooks": "^1.0.6",
+    "@mantine/core": "1.2.0-alpha.5",
+    "@mantine/hooks": "1.2.0-alpha.5",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-jss": "^10.6.0"
